--- a/content/posts/滑动窗口最多连续个数题目一网打尽.md
+++ b/content/posts/滑动窗口最多连续个数题目一网打尽.md
@@ -40,12 +40,12 @@ tags:
 
 ```go
 func longestOnes(nums []int, k int) int {
-    // 时间复杂度 O(n) 
-    // 空间复杂度 O(1)
+	// 时间复杂度 O(n)
+	// 空间复杂度 O(1)
 	var (
-         // k 用来维护 0 出现的次数
-         // k == k - count(0) // [left,right] 区间内
-         n     = len(nums)
+		// k 用来维护 0 出现的次数
+		// k == k - count(0) // [left,right] 区间内
+		n     = len(nums)
 		ans   = 0 // 答案
 		left  = 0 // 左指针
 		right = 0 // 右指针
@@ -54,13 +54,13 @@ func longestOnes(nums []int, k int) int {
 		if nums[right] == 0 {
 			k-- // 先统计0出现的次数
 		}
-		for k<0{ // 当 0 出现的次数 大于 K 的值就开始移动 left 直到 K == 0
-            if nums[left]==0{ 
-                k++ // 出现 0 统计一次
-            }
-            left++ // 移动左指针
-        } // 这个循环结束的位置在 left 下标的下一个 0 的位置
-        ans = max(ans, right-left+1) // 计算结果
+		for k < 0 { // 当 0 出现的次数 大于 K 的值就开始移动 left 直到 K == 0
+			if nums[left] == 0 {
+				k++ // 出现 0 统计一次
+			}
+			left++ // 移动左指针
+		} // 这个循环结束的位置在 left 下标的下一个 0 的位置
+		ans = max(ans, right-left+1) // 计算结果
 	}
 	return ans
 }
@@ -291,4 +291,4 @@ func maxConsecutiveAnswers(answerKey string, k int) int {
 
 小细节 ： 计算滑动窗口通常都是 right-left + 1 这里要理解 +1 可以理解为 如果left和 right 都指向同一个元素 那么长度是 1 就需要  + 1
 
-题单总结 :[龅牙叔](Leetcode.1004 最大连续1的个数 III)
+题单总结 :[龅牙叔](https://leetcode.cn/u/baoya_uncle/)
